--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,5 +17,5 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Atkinson Hyperlegible", Arial, Helvetica, sans-serif;
 }
