--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,22 +64,22 @@ body {
   }
 
   .dark {
-    --background: hsl(222.2 84% 4.9%);
-    --foreground: hsl(210 40% 98%);
+    --background: hsl(231.43, 10.45%, 13.14%);
+    --foreground: hsl(248.57, 13.73%, 90%);
     --card: hsl(222.2 84% 4.9%);
     --card-foreground: hsl(210 40% 98%);
     --popover: hsl(222.2 84% 4.9%);
     --popover-foreground: hsl(210 40% 98%);
-    --primary: hsl(217.2 91.2% 59.8%);
-    --primary-foreground: hsl(222.2 47.4% 11.2%);
+    --primary: hsl(226.4, 100%, 85.29%);
+    --primary-foreground: hsl(223.71, 57.38%, 23.92%);
     --secondary: hsl(217.2 32.6% 17.5%);
     --secondary-foreground: hsl(210 40% 98%);
     --muted: hsl(217.2 32.6% 17.5%);
     --muted-foreground: hsl(215 20.2% 65.1%);
     --accent: hsl(217.2 32.6% 17.5%);
     --accent-foreground: hsl(210 40% 98%);
-    --destructive: hsl(0 62.8% 30.6%);
-    --destructive-foreground: hsl(210 40% 98%);
+    --destructive: hsl(355.92, 100%, 28.82%);
+    --destructive-foreground: hsl(5.85, 100%, 91.96%);
     --border: 217.2 32.6% 17.5%;
     --input: hsl(217.2 32.6% 17.5%);
     --ring: hsl(224.3 76.3% 48%);
