--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,10 @@
   }
 }
 
+html, body {
+  font-size: 18px;
+}
+
 body {
   font-family: "Atkinson Hyperlegible", Arial, Helvetica, sans-serif;
 }
