--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -2,6 +2,30 @@
 @plugin 'tailwindcss-animate';
 @custom-variant dark (&:is(.dark *));
 
+@font-face {
+  font-family: 'Swiss 721 Condensed';
+  src: url('/fonts/swiss_721_condensed_regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Swiss 721 Condensed';
+  src: url('/fonts/swiss_721_condensed_bold.otf') format('opentype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Swiss 721 Condensed';
+  src: url('/fonts/swiss_721_condensed_black.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
 @theme {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -149,7 +173,8 @@ html, body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: var(--font-geist-sans);
+  font-family: 'Swiss 721 Condensed', sans-serif;
+  /* font-family: var(--font-geist-sans); */
 }
 
 /*---break---*/
