--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -83,11 +83,11 @@ html, body {
     --input: hsl(214.3 31.8% 91.4%);
     --ring: hsl(221.2 83.2% 53.3%);
     --radius: 0.3rem;
-    --chart-1: hsl(12 76% 61%);
-    --chart-2: hsl(173 58% 39%);
-    --chart-3: hsl(197 37% 24%);
-    --chart-4: hsl(43 74% 66%);
-    --chart-5: hsl(27 87% 67%);
+    --chart-1: 221.2 83.2% 53.3%;
+    --chart-2: 212 95% 68%;
+    --chart-3: 216 92% 60%;
+    --chart-4: 210 98% 78%;
+    --chart-5: 212 97% 87%;
 
     --sidebar: hsl(257.14, 100%, 98.63%);
     --sidebar-background: hsl(257.14, 100%, 98.63%);
@@ -120,11 +120,11 @@ html, body {
     --border: hsl(217.2 32.6% 17.5%);
     --input: hsl(234.55, 5.16%, 58.24%);
     --ring: hsl(224.3 76.3% 48%);
-    --chart-1: hsl(220 70% 50%);
-    --chart-2: hsl(160 60% 45%);
-    --chart-3: hsl(30 80% 55%);
-    --chart-4: hsl(280 65% 60%);
-    --chart-5: hsl(340 75% 55%);
+    --chart-1: 221.2 83.2% 53.3%;
+    --chart-2: 212 95% 68%;
+    --chart-3: 216 92% 60%;
+    --chart-4: 210 98% 78%;
+    --chart-5: 212 97% 87%;
 
     --sidebar: hsl(230, 14.29%, 8.24%);
     --sidebar-background: hsl(230, 14.29%, 8.24%);
